src/_generated/AntlrGlslParser.ts
// Generated from syntaxes/AntlrGlslParser.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { AntlrGlslParserVisitor } from "./AntlrGlslParserVisitor";


export class AntlrGlslParser extends Parser {
	public static readonly KW_BREAK = 1;
	public static readonly KW_CONTINUE = 2;
	public static readonly KW_DO = 3;
	public static readonly KW_FOR = 4;
	public static readonly KW_WHILE = 5;
	public static readonly KW_SWITCH = 6;
	public static readonly KW_CASE = 7;
	public static readonly KW_DEFAULT = 8;
	public static readonly KW_IF = 9;
	public static readonly KW_ELSE = 10;
	public static readonly KW_DISCARD = 11;
	public static readonly KW_RETURN = 12;
	public static readonly KW_STRUCT = 13;
	public static readonly KW_VOID = 14;
	public static readonly Q_PRECISION = 15;
	public static readonly Q_LAYOUT = 16;
	public static readonly Q_INVARIANT = 17;
	public static readonly Q_SMOOTH = 18;
	public static readonly Q_FLAT = 19;
	public static readonly Q_CONST = 20;
	public static readonly Q_INOUT = 21;
	public static readonly Q_IN = 22;
	public static readonly Q_OUT = 23;
	public static readonly Q_CENTROID = 24;
	public static readonly Q_UNIFORM = 25;
	public static readonly Q_VARYING = 26;
	public static readonly Q_ATTRIBUTE = 27;
	public static readonly Q_HIGHP = 28;
	public static readonly Q_MEDIUMP = 29;
	public static readonly Q_LOWP = 30;
	public static readonly TYPE = 31;
	public static readonly BOOL_LITERAL = 32;
	public static readonly INT_LITERAL = 33;
	public static readonly FLOAT_LITERAL = 34;
	public static readonly OP_MUL = 35;
	public static readonly OP_ADD = 36;
	public static readonly OP_SUB = 37;
	public static readonly OP_DIV = 38;
	public static readonly OP_MOD = 39;
	public static readonly OP_INC = 40;
	public static readonly OP_DEC = 41;
	public static readonly OP_SHIFT = 42;
	public static readonly OP_RELATIONAL = 43;
	public static readonly OP_EQUALITY = 44;
	public static readonly OP_BIT_AND = 45;
	public static readonly OP_BIT_XOR = 46;
	public static readonly OP_BIT_OR = 47;
	public static readonly OP_BIT_UNARY = 48;
	public static readonly OP_LOGICAL_AND = 49;
	public static readonly OP_LOGICAL_OR = 50;
	public static readonly OP_LOGICAL_XOR = 51;
	public static readonly OP_LOGICAL_UNARY = 52;
	public static readonly OP_MODIFY = 53;
	public static readonly OP_ASSIGN = 54;
	public static readonly MACRO = 55;
	public static readonly NEW_LINE = 56;
	public static readonly SPACE = 57;
	public static readonly TAB = 58;
	public static readonly MULTI_LINE_COMMENT = 59;
	public static readonly SINGLE_LINE_COMMENT = 60;
	public static readonly IDENTIFIER = 61;
	public static readonly DOT = 62;
	public static readonly COMMA = 63;
	public static readonly COLON = 64;
	public static readonly SEMICOLON = 65;
	public static readonly QUESTION = 66;
	public static readonly LRB = 67;
	public static readonly RRB = 68;
	public static readonly LCB = 69;
	public static readonly RCB = 70;
	public static readonly LSB = 71;
	public static readonly RSB = 72;
	public static readonly RULE_start = 0;
	public static readonly RULE_function_prototype = 1;
	public static readonly RULE_function_definition = 2;
	public static readonly RULE_function_header = 3;
	public static readonly RULE_function_parameter_list = 4;
	public static readonly RULE_function_call = 5;
	public static readonly RULE_function_call_parameter_list = 6;
	public static readonly RULE_statement = 7;
	public static readonly RULE_compound_statement = 8;
	public static readonly RULE_simple_statement = 9;
	public static readonly RULE_selection_statement = 10;
	public static readonly RULE_switch_statement = 11;
	public static readonly RULE_case_group = 12;
	public static readonly RULE_case_label = 13;
	public static readonly RULE_case_statement_list = 14;
	public static readonly RULE_iteration_statement = 15;
	public static readonly RULE_for_iteration = 16;
	public static readonly RULE_while_iteration = 17;
	public static readonly RULE_do_while_iteration = 18;
	public static readonly RULE_jump_statement = 19;
	public static readonly RULE_expression_statement = 20;
	public static readonly RULE_declaration_statement = 21;
	public static readonly RULE_precision_declaration = 22;
	public static readonly RULE_invariant_declaration = 23;
	public static readonly RULE_variable_declaration = 24;
	public static readonly RULE_single_variable_declaration = 25;
	public static readonly RULE_type_declaration = 26;
	public static readonly RULE_interface_block_declaration = 27;
	public static readonly RULE_identifier_optarray = 28;
	public static readonly RULE_identifier_optarray_optassignment = 29;
	public static readonly RULE_expression = 30;
	public static readonly RULE_expression_list = 31;
	public static readonly RULE_type = 32;
	public static readonly RULE_type_usage = 33;
	public static readonly RULE_array_subscript = 34;
	public static readonly RULE_qualifier = 35;
	public static readonly RULE_type_qualifier = 36;
	public static readonly RULE_storage_qualifier = 37;
	public static readonly RULE_layout_qualifier = 38;
	public static readonly RULE_layout_qualifier_id_list = 39;
	public static readonly RULE_layout_qualifier_id = 40;
	public static readonly RULE_interpolation_qualifier = 41;
	public static readonly RULE_literal = 42;
	public static readonly RULE_number_literal = 43;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"start", "function_prototype", "function_definition", "function_header", 
		"function_parameter_list", "function_call", "function_call_parameter_list", 
		"statement", "compound_statement", "simple_statement", "selection_statement", 
		"switch_statement", "case_group", "case_label", "case_statement_list", 
		"iteration_statement", "for_iteration", "while_iteration", "do_while_iteration", 
		"jump_statement", "expression_statement", "declaration_statement", "precision_declaration", 
		"invariant_declaration", "variable_declaration", "single_variable_declaration", 
		"type_declaration", "interface_block_declaration", "identifier_optarray", 
		"identifier_optarray_optassignment", "expression", "expression_list", 
		"type", "type_usage", "array_subscript", "qualifier", "type_qualifier", 
		"storage_qualifier", "layout_qualifier", "layout_qualifier_id_list", "layout_qualifier_id", 
		"interpolation_qualifier", "literal", "number_literal",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'break'", "'continue'", "'do'", "'for'", "'while'", "'switch'", 
		"'case'", "'default'", "'if'", "'else'", "'discard'", "'return'", "'struct'", 
		"'void'", "'precision'", "'layout'", "'invariant'", "'smooth'", "'flat'", 
		"'const'", "'inout'", "'in'", "'out'", "'centroid'", "'uniform'", "'varying'", 
		"'attribute'", "'highp'", "'mediump'", "'lowp'", undefined, undefined, 
		undefined, undefined, "'*'", "'+'", "'-'", "'/'", "'%'", "'++'", "'--'", 
		undefined, undefined, undefined, "'&'", "'^'", "'|'", "'~'", "'&&'", "'||'", 
		"'^^'", "'!'", undefined, "'='", undefined, undefined, "' '", "'\t'", 
		undefined, undefined, undefined, "'.'", "','", "':'", "';'", "'?'", "'('", 
		"')'", "'{'", "'}'", "'['", "']'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "KW_BREAK", "KW_CONTINUE", "KW_DO", "KW_FOR", "KW_WHILE", "KW_SWITCH", 
		"KW_CASE", "KW_DEFAULT", "KW_IF", "KW_ELSE", "KW_DISCARD", "KW_RETURN", 
		"KW_STRUCT", "KW_VOID", "Q_PRECISION", "Q_LAYOUT", "Q_INVARIANT", "Q_SMOOTH", 
		"Q_FLAT", "Q_CONST", "Q_INOUT", "Q_IN", "Q_OUT", "Q_CENTROID", "Q_UNIFORM", 
		"Q_VARYING", "Q_ATTRIBUTE", "Q_HIGHP", "Q_MEDIUMP", "Q_LOWP", "TYPE", 
		"BOOL_LITERAL", "INT_LITERAL", "FLOAT_LITERAL", "OP_MUL", "OP_ADD", "OP_SUB", 
		"OP_DIV", "OP_MOD", "OP_INC", "OP_DEC", "OP_SHIFT", "OP_RELATIONAL", "OP_EQUALITY", 
		"OP_BIT_AND", "OP_BIT_XOR", "OP_BIT_OR", "OP_BIT_UNARY", "OP_LOGICAL_AND", 
		"OP_LOGICAL_OR", "OP_LOGICAL_XOR", "OP_LOGICAL_UNARY", "OP_MODIFY", "OP_ASSIGN", 
		"MACRO", "NEW_LINE", "SPACE", "TAB", "MULTI_LINE_COMMENT", "SINGLE_LINE_COMMENT", 
		"IDENTIFIER", "DOT", "COMMA", "COLON", "SEMICOLON", "QUESTION", "LRB", 
		"RRB", "LCB", "RCB", "LSB", "RSB",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(AntlrGlslParser._LITERAL_NAMES, AntlrGlslParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return AntlrGlslParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "AntlrGlslParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return AntlrGlslParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return AntlrGlslParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(AntlrGlslParser._ATN, this);
	}
	// @RuleVersion(0)
	public start(): StartContext {
		let _localctx: StartContext = new StartContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, AntlrGlslParser.RULE_start);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 94;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << AntlrGlslParser.KW_STRUCT) | (1 << AntlrGlslParser.KW_VOID) | (1 << AntlrGlslParser.Q_PRECISION) | (1 << AntlrGlslParser.Q_LAYOUT) | (1 << AntlrGlslParser.Q_INVARIANT) | (1 << AntlrGlslParser.Q_SMOOTH) | (1 << AntlrGlslParser.Q_FLAT) | (1 << AntlrGlslParser.Q_CONST) | (1 << AntlrGlslParser.Q_INOUT) | (1 << AntlrGlslParser.Q_IN) | (1 << AntlrGlslParser.Q_OUT) | (1 << AntlrGlslParser.Q_CENTROID) | (1 << AntlrGlslParser.Q_UNIFORM) | (1 << AntlrGlslParser.Q_VARYING) | (1 << AntlrGlslParser.Q_ATTRIBUTE) | (1 << AntlrGlslParser.Q_HIGHP) | (1 << AntlrGlslParser.Q_MEDIUMP) | (1 << AntlrGlslParser.Q_LOWP) | (1 << AntlrGlslParser.TYPE))) !== 0) || _la === AntlrGlslParser.IDENTIFIER || _la === AntlrGlslParser.SEMICOLON) {
				{
				this.state = 92;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 0, this._ctx) ) {
				case 1:
					{
					this.state = 88;
					this.function_prototype();
					}
					break;

				case 2:
					{
					this.state = 89;
					this.function_definition();
					}
					break;

				case 3:
					{
					this.state = 90;
					this.declaration_statement();
					}
					break;

				case 4:
					{
					this.state = 91;
					this.match(AntlrGlslParser.SEMICOLON);
					}
					break;
				}
				}
				this.state = 96;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public function_prototype(): Function_prototypeContext {
		let _localctx: Function_prototypeContext = new Function_prototypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, AntlrGlslParser.RULE_function_prototype);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 97;
			this.function_header();
			this.state = 98;
			this.match(AntlrGlslParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public function_definition(): Function_definitionContext {
		let _localctx: Function_definitionContext = new Function_definitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, AntlrGlslParser.RULE_function_definition);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 100;
			this.function_header();
			this.state = 101;
			this.compound_statement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public function_header(): Function_headerContext {
		let _localctx: Function_headerContext = new Function_headerContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, AntlrGlslParser.RULE_function_header);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 103;
			this.type_usage();
			this.state = 104;
			this.match(AntlrGlslParser.IDENTIFIER);
			this.state = 105;
			this.match(AntlrGlslParser.LRB);
			this.state = 107;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << AntlrGlslParser.KW_STRUCT) | (1 << AntlrGlslParser.KW_VOID) | (1 << AntlrGlslParser.Q_PRECISION) | (1 << AntlrGlslParser.Q_LAYOUT) | (1 << AntlrGlslParser.Q_INVARIANT) | (1 << AntlrGlslParser.Q_SMOOTH) | (1 << AntlrGlslParser.Q_FLAT) | (1 << AntlrGlslParser.Q_CONST) | (1 << AntlrGlslParser.Q_INOUT) | (1 << AntlrGlslParser.Q_IN) | (1 << AntlrGlslParser.Q_OUT) | (1 << AntlrGlslParser.Q_CENTROID) | (1 << AntlrGlslParser.Q_UNIFORM) | (1 << AntlrGlslParser.Q_VARYING) | (1 << AntlrGlslParser.Q_ATTRIBUTE) | (1 << AntlrGlslParser.Q_HIGHP) | (1 << AntlrGlslParser.Q_MEDIUMP) | (1 << AntlrGlslParser.Q_LOWP) | (1 << AntlrGlslParser.TYPE))) !== 0) || _la === AntlrGlslParser.IDENTIFIER) {
				{
				this.state = 106;
				this.function_parameter_list();
				}
			}

			this.state = 109;
			this.match(AntlrGlslParser.RRB);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public function_parameter_list(): Function_parameter_listContext {
		let _localctx: Function_parameter_listContext = new Function_parameter_listContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, AntlrGlslParser.RULE_function_parameter_list);
		let _la: number;
		try {
			this.state = 120;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 111;
				this.match(AntlrGlslParser.KW_VOID);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 112;
				this.single_variable_declaration();
				this.state = 117;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === AntlrGlslParser.COMMA) {
					{
					{
					this.state = 113;
					this.match(AntlrGlslParser.COMMA);
					this.state = 114;
					this.single_variable_declaration();
					}
					}
					this.state = 119;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public function_call(): Function_callContext {
		let _localctx: Function_callContext = new Function_callContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, AntlrGlslParser.RULE_function_call);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 122;
			_la = this._input.LA(1);
			if (!(_la === AntlrGlslParser.TYPE || _la === AntlrGlslParser.IDENTIFIER)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 123;
			this.match(AntlrGlslParser.LRB);
			this.state = 125;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 14)) & ~0x1F) === 0 && ((1 << (_la - 14)) & ((1 << (AntlrGlslParser.KW_VOID - 14)) | (1 << (AntlrGlslParser.TYPE - 14)) | (1 << (AntlrGlslParser.BOOL_LITERAL - 14)) | (1 << (AntlrGlslParser.INT_LITERAL - 14)) | (1 << (AntlrGlslParser.FLOAT_LITERAL - 14)) | (1 << (AntlrGlslParser.OP_ADD - 14)) | (1 << (AntlrGlslParser.OP_SUB - 14)) | (1 << (AntlrGlslParser.OP_INC - 14)) | (1 << (AntlrGlslParser.OP_DEC - 14)))) !== 0) || ((((_la - 48)) & ~0x1F) === 0 && ((1 << (_la - 48)) & ((1 << (AntlrGlslParser.OP_BIT_UNARY - 48)) | (1 << (AntlrGlslParser.OP_LOGICAL_UNARY - 48)) | (1 << (AntlrGlslParser.IDENTIFIER - 48)) | (1 << (AntlrGlslParser.LRB - 48)))) !== 0)) {
				{
				this.state = 124;
				this.function_call_parameter_list();
				}
			}

			this.state = 127;
			this.match(AntlrGlslParser.RRB);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public function_call_parameter_list(): Function_call_parameter_listContext {
		let _localctx: Function_call_parameter_listContext = new Function_call_parameter_listContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, AntlrGlslParser.RULE_function_call_parameter_list);
		try {
			this.state = 131;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case AntlrGlslParser.KW_VOID:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 129;
				this.match(AntlrGlslParser.KW_VOID);
				}
				break;
			case AntlrGlslParser.TYPE:
			case AntlrGlslParser.BOOL_LITERAL:
			case AntlrGlslParser.INT_LITERAL:
			case AntlrGlslParser.FLOAT_LITERAL:
			case AntlrGlslParser.OP_ADD:
			case AntlrGlslParser.OP_SUB:
			case AntlrGlslParser.OP_INC:
			case AntlrGlslParser.OP_DEC:
			case AntlrGlslParser.OP_BIT_UNARY:
			case AntlrGlslParser.OP_LOGICAL_UNARY:
			case AntlrGlslParser.IDENTIFIER:
			case AntlrGlslParser.LRB:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 130;
				this.expression_list();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, AntlrGlslParser.RULE_statement);
		try {
			this.state = 135;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case AntlrGlslParser.LCB:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 133;
				this.compound_statement();
				}
				break;
			case AntlrGlslParser.KW_BREAK:
			case AntlrGlslParser.KW_CONTINUE:
			case AntlrGlslParser.KW_DO:
			case AntlrGlslParser.KW_FOR:
			case AntlrGlslParser.KW_WHILE:
			case AntlrGlslParser.KW_SWITCH:
			case AntlrGlslParser.KW_IF:
			case AntlrGlslParser.KW_DISCARD:
			case AntlrGlslParser.KW_RETURN:
			case AntlrGlslParser.KW_STRUCT:
			case AntlrGlslParser.KW_VOID:
			case AntlrGlslParser.Q_PRECISION:
			case AntlrGlslParser.Q_LAYOUT:
			case AntlrGlslParser.Q_INVARIANT:
			case AntlrGlslParser.Q_SMOOTH:
			case AntlrGlslParser.Q_FLAT:
			case AntlrGlslParser.Q_CONST:
			case AntlrGlslParser.Q_INOUT:
			case AntlrGlslParser.Q_IN:
			case AntlrGlslParser.Q_OUT:
			case AntlrGlslParser.Q_CENTROID:
			case AntlrGlslParser.Q_UNIFORM:
			case AntlrGlslParser.Q_VARYING:
			case AntlrGlslParser.Q_ATTRIBUTE:
			case AntlrGlslParser.Q_HIGHP:
			case AntlrGlslParser.Q_MEDIUMP:
			case AntlrGlslParser.Q_LOWP:
			case AntlrGlslParser.TYPE:
			case AntlrGlslParser.BOOL_LITERAL:
			case AntlrGlslParser.INT_LITERAL:
			case AntlrGlslParser.FLOAT_LITERAL:
			case AntlrGlslParser.OP_ADD:
			case AntlrGlslParser.OP_SUB:
			case AntlrGlslParser.OP_INC:
			case AntlrGlslParser.OP_DEC:
			case AntlrGlslParser.OP_BIT_UNARY:
			case AntlrGlslParser.OP_LOGICAL_UNARY:
			case AntlrGlslParser.IDENTIFIER:
			case AntlrGlslParser.SEMICOLON:
			case AntlrGlslParser.LRB:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 134;
				this.simple_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public compound_statement(): Compound_statementContext {
		let _localctx: Compound_statementContext = new Compound_statementContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, AntlrGlslParser.RULE_compound_statement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 137;
			this.match(AntlrGlslParser.LCB);
			this.state = 141;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << AntlrGlslParser.KW_BREAK) | (1 << AntlrGlslParser.KW_CONTINUE) | (1 << AntlrGlslParser.KW_DO) | (1 << AntlrGlslParser.KW_FOR) | (1 << AntlrGlslParser.KW_WHILE) | (1 << AntlrGlslParser.KW_SWITCH) | (1 << AntlrGlslParser.KW_IF) | (1 << AntlrGlslParser.KW_DISCARD) | (1 << AntlrGlslParser.KW_RETURN) | (1 << AntlrGlslParser.KW_STRUCT) | (1 << AntlrGlslParser.KW_VOID) | (1 << AntlrGlslParser.Q_PRECISION) | (1 << AntlrGlslParser.Q_LAYOUT) | (1 << AntlrGlslParser.Q_INVARIANT) | (1 << AntlrGlslParser.Q_SMOOTH) | (1 << AntlrGlslParser.Q_FLAT) | (1 << AntlrGlslParser.Q_CONST) | (1 << AntlrGlslParser.Q_INOUT) | (1 << AntlrGlslParser.Q_IN) | (1 << AntlrGlslParser.Q_OUT) | (1 << AntlrGlslParser.Q_CENTROID) | (1 << AntlrGlslParser.Q_UNIFORM) | (1 << AntlrGlslParser.Q_VARYING) | (1 << AntlrGlslParser.Q_ATTRIBUTE) | (1 << AntlrGlslParser.Q_HIGHP) | (1 << AntlrGlslParser.Q_MEDIUMP) | (1 << AntlrGlslParser.Q_LOWP) | (1 << AntlrGlslParser.TYPE))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (AntlrGlslParser.BOOL_LITERAL - 32)) | (1 << (AntlrGlslParser.INT_LITERAL - 32)) | (1 << (AntlrGlslParser.FLOAT_LITERAL - 32)) | (1 << (AntlrGlslParser.OP_ADD - 32)) | (1 << (AntlrGlslParser.OP_SUB - 32)) | (1 << (AntlrGlslParser.OP_INC - 32)) | (1 << (AntlrGlslParser.OP_DEC - 32)) | (1 << (AntlrGlslParser.OP_BIT_UNARY - 32)) | (1 << (AntlrGlslParser.OP_LOGICAL_UNARY - 32)) | (1 << (AntlrGlslParser.IDENTIFIER - 32)))) !== 0) || ((((_la - 65)) & ~0x1F) === 0 && ((1 << (_la - 65)) & ((1 << (AntlrGlslParser.SEMICOLON - 65)) | (1 << (AntlrGlslParser.LRB - 65)) | (1 << (AntlrGlslParser.LCB - 65)))) !== 0)) {
				{
				{
				this.state = 138;
				this.statement();
				}
				}
				this.state = 143;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
